--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.5",
     "@types/react-router-dom": "^4.3.4",
+    "antd": "^3.20.7",
     "axios": "^0.19.0",
+    "customize-cra": "^0.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
@@ -37,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.12.0",
     "postcss": "^7.0.17",
     "precss": "^4.0.0",
     "react-app-rewire-postcss": "^3.0.2",
